--- a/Comprehension_lists.ipynb
+++ b/Comprehension_lists.ipynb
@@ -532,181 +532,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bLaqv1a0UqIW",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5c7602f3-dfe2-45b1-b137-5b4f722297d9"
+        "id": "bLaqv1a0UqIW"
       },
       "source": [
-        "# Your turn here\n",
-        "[x for x in duplicates_list if duplicates_list[x]==duplicates_list[x+1]]"
+        "# Your turn here"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[3, 3, 8, 9]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 10
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "EiQIXFKQahr1",
-        "outputId": "52ba932d-dbdc-493b-8cf7-02fdd0fe8273"
-      },
-      "source": [
-        "# Your turn here\n",
-        "duplicates_list = [0,0,1,2,3,4,5,6,7,7,7,8,9,10]\n",
-        "[x for x in duplicates_list if duplicates_list.count(x)==1]"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0, 1, 2, 4, 5, 6, 8, 9, 10]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 29
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GQJH0ldPbasS",
-        "outputId": "73bb7801-8329-46ef-f8cf-f3c294f5a785"
-      },
-      "source": [
-        "duplicates_list.count(7)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 28
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rl9q_GMDcE7w",
-        "outputId": "18629eb5-b2c4-4597-dad9-0fd00ccf1202"
-      },
-      "source": [
-        "#\n",
-        "duplicates_list = [0,0,1,2,3,4,5,6,7,7,7,8,9,10]\n",
-        "no_dup=[]\n",
-        "for x in duplicates_list:\n",
-        "  if x not in no_dup:\n",
-        "    no_dup.append(x)\n",
-        "\n",
-        "no_dup   "
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 41
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "X9js6IDjdk9i",
-        "outputId": "c9e278c3-39ce-4226-91a3-928ba2decd13"
-      },
-      "source": [
-        "no_dup=[]\n",
-        "[no_dup.append(x) for x in duplicates_list if x not in no_dup]"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[None, None, None, None, None, None, None, None, None, None, None]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 43
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FiPW3qYkdzbb",
-        "outputId": "a3fadaba-647c-4322-fdc5-11ceef2b5c0a"
-      },
-      "source": [
-        "no_dup"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 40
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
