--- a/Dev_IA_Challenge_SQL.ipynb
+++ b/Dev_IA_Challenge_SQL.ipynb
@@ -33,7 +33,7 @@
         "\n",
         "**Bienvenue dans le challenge SQL !** Il s'agit d'évaluer les compétences acquises pour formuler des requêtes SQL et extraire des informations pertinentes.\n",
         "\n",
-        "Vous avez une série de X questions et vous devez proposer à chaque fois une instruction SQL.\n",
+        "Vous avez une série de 30 questions et vous devez proposer à chaque fois une instruction SQL.\n",
         "\n",
         "La base de données **MySQL** est disponible ici [w3 schools](https://www.w3schools.com/mysql/trymysql.asp?filename=trysql_editor) :\n",
         "- la base comporte 8 tables,\n",
