--- a/Dev_IA_Challenge_SQL.ipynb
+++ b/Dev_IA_Challenge_SQL.ipynb
@@ -824,13 +824,13 @@
       "cell_type": "markdown",
       "source": [
         "## Question 29\n",
-        "Calculer d'articles commandés par fournisseur (`SupplierName`) ainsi le pourcentage du total de commandes.  \n",
-        "Ordonner la table par ordre decroissant du nombre de commandes.  \n",
+        "Calculer la quantité d'articles par fournisseur (`SupplierName`) ainsi le pourcentage du total.  \n",
+        "Ordonner la table par ordre decroissant du nombre d'articles.  \n",
         "La table doit avoir une structure comme dans l'example suivant :  \n",
         "\n",
-        "| SupplierName\t| Nb_commandes\t| Part_commandes |\n",
+        "| SupplierName\t| Nb_articles\t| Part_commandes |\n",
         "| --| --| --|\n",
-        "| Plutzer Lebensmittelgroßmärkte AG\t| 179\t| 8.3 %\t|"
+        "| Plutzer Lebensmittelgroßmärkte AG\t| 4072\t| 7.9 %\t|"
       ],
       "metadata": {
         "id": "qekoYiYkIZAs"
