--- a/Dev_IA_Challenge_SQL.ipynb
+++ b/Dev_IA_Challenge_SQL.ipynb
@@ -824,11 +824,11 @@
       "cell_type": "markdown",
       "source": [
         "## Question 29\n",
-        "Calculer la quantité d'articles par fournisseur (`SupplierName`) ainsi le pourcentage du total.  \n",
+        "Calculer la quantité totale d'articles vendues par fournisseur (`SupplierName`) ainsi que le pourcentage du total.  \n",
         "Ordonner la table par ordre decroissant du nombre d'articles.  \n",
         "La table doit avoir une structure comme dans l'example suivant :  \n",
         "\n",
-        "| SupplierName\t| Nb_articles\t| Part_commandes |\n",
+        "| SupplierName\t| Nb_articles\t| Part |\n",
         "| --| --| --|\n",
         "| Plutzer Lebensmittelgroßmärkte AG\t| 4072\t| 7.9 %\t|"
       ],
