--- a/Dev_IA_Challenge_SQL_correction.ipynb
+++ b/Dev_IA_Challenge_SQL_correction.ipynb
@@ -122,6 +122,36 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Pour rappel, une instruction SLQ complète doit respecter la structure et l'ordre des clauses tel que proposé ci-dessous :"
+      ],
+      "metadata": {
+        "id": "mVvrdmYam-6M"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%sql\n",
+        "-------------------------------------------------------------------\n",
+        "\n",
+        "SELECT\n",
+        "FROM\n",
+        "JOIN ON\n",
+        "WHERE\n",
+        "GROUP BY\n",
+        "HAVING\n",
+        "ORDER BY\n",
+        "LIMIT;"
+      ],
+      "metadata": {
+        "id": "Pvkn0TeL6He3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Question 2\n",
         "Sélectionner les colonnes `ProductName` et `Price` de la table `Products`."
       ],
@@ -267,8 +297,8 @@
         "\n",
         "SELECT *\n",
         "FROM Employees\n",
-        "WHERE FirstName = 'Janet' OR FirstName = 'Michael'\n",
-        "#WHERE FirstName in ('Janet', 'Michael')"
+        "#WHERE FirstName = 'Janet' OR FirstName = 'Michael'\n",
+        "WHERE FirstName in ('Janet', 'Michael')"
       ],
       "metadata": {
         "id": "n8_W5-kGH9RE"
@@ -508,7 +538,9 @@
         "%%sql\n",
         "-------------------------------------------------------------------\n",
         "\n",
-        "SELECT SupplierName, CONCAT(Address, \" - \", PostalCode, \" - \", City, \" - \", Country) AS Adresse_postale\n",
+        "SELECT SupplierName\n",
+        "#, CONCAT(Address, \" - \", PostalCode, \" - \", City, \" - \", Country) AS Adresse_postale\n",
+        ", CONCAT_WS(\" - \", Address, PostalCode, City, Country) AS Adresse_postale\n",
         "FROM Suppliers"
       ],
       "metadata": {
@@ -656,7 +688,7 @@
         "SELECT MONTH(OrderDate) As Mois_commande, COUNT(OrderID) AS Volume_commande\n",
         "FROM Orders\n",
         "GROUP BY Mois_commande\n",
-        "ORDER BY Volume_commande\n",
+        "ORDER BY Volume_commande DESC\n",
         "LIMIT 3"
       ],
       "metadata": {
@@ -972,13 +1004,13 @@
       "cell_type": "markdown",
       "source": [
         "## Question 29\n",
-        "Calculer la quantité d'articles par fournisseur (`SupplierName`) ainsi le pourcentage du total.  \n",
+        "Calculer la quantité totale d'articles vendues par fournisseur (`SupplierName`) ainsi que le pourcentage du total.  \n",
         "Ordonner la table par ordre decroissant du nombre d'articles.  \n",
         "La table doit avoir une structure comme dans l'example suivant :  \n",
         "\n",
-        "| SupplierName\t| Nb_commandes\t| Part_commandes |\n",
+        "| SupplierName\t| Nb_articles\t| Part |\n",
         "| --| --| --|\n",
-        "| Plutzer Lebensmittelgroßmärkte AG\t| 179\t| 8.3 %\t|"
+        "| Plutzer Lebensmittelgroßmärkte AG\t| 4072\t| 7.9 %\t|"
       ],
       "metadata": {
         "id": "qekoYiYkIZAs"
@@ -990,7 +1022,7 @@
         "%%sql\n",
         "-------------------------------------------------------------------\n",
         "\n",
-        "SELECT SupplierName, SUM(Quantity) AS Nb_commandes, CONCAT(ROUND(100 * SUM(Quantity) / (SELECT SUM(Quantity) FROM OrderDetails), 1), \" %\") AS Part_commandes\n",
+        "SELECT SupplierName, SUM(Quantity) AS Nb_articles, CONCAT(ROUND(100 * SUM(Quantity) / (SELECT SUM(Quantity) FROM OrderDetails), 1), \" %\") AS Part_commandes\n",
         "FROM (\n",
         "  SELECT det.OrderDetailID, det.OrderID, det.ProductID, det.Quantity, prod.SupplierID, sup.SupplierName\n",
         "  FROM OrderDetails as det\n",
@@ -998,7 +1030,7 @@
         "  LEFT JOIN Suppliers AS sup ON prod.SupplierID = sup.SupplierID\n",
         ") AS data\n",
         "GROUP BY SupplierName\n",
-        "ORDER BY Nb_commandes DESC;"
+        "ORDER BY Nb_articles DESC;"
       ],
       "metadata": {
         "id": "AW78JD7AIZAs"
